// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeEditorElement do not add children 1`] = `
Object {
  "children": Array [],
}
`;

exports[`normalizeEditorElement do not remove children 1`] = `
Object {
  "children": Array [],
}
`;

exports[`normalizeEditorElement do not remove children 2`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
}
`;

exports[`normalizeEditorElement do not remove children 3`] = `
Object {
  "children": Array [
    Object {
      "text": ".",
    },
  ],
}
`;

exports[`normalizeEditorElement merges adjacent strings 1`] = `
Object {
  "children": Array [
    Object {
      "text": "ab",
    },
    Object {
      "children": Array [
        Object {
          "text": "abc",
        },
        Object {
          "children": Array [
            Object {
              "text": "a",
            },
            Object {
              "children": Array [],
            },
            Object {
              "text": "bc",
            },
          ],
        },
      ],
    },
    Object {
      "text": "ab",
    },
  ],
}
`;
